--- a/src/main/webapp/resources/css/notice/notice.css
+++ b/src/main/webapp/resources/css/notice/notice.css
@@ -73,6 +73,33 @@ main {
             background: linear-gradient(90deg, #002B5B, #002B5B 8%, #EA5455 8%, #EA5455 18%, #e4dccf 18%, #e4dccf 32%, #F9F5EB 32%, #F9F5EB 68%, #e4dccf 68%, #e4dccf 82%, #EA5455 82%, #EA5455 92%, #002B5B 92%, #002B5B 100%);
         }
 
+    /* 작성하기 버튼 */
+    #write-notice {
+    	width: inherit;
+    	display: flex;
+    	justify-content: right;    	
+        padding-top: 30px;
+        text-align: center;
+    }
+    
+	    #write-notice > button  {
+	        background-color: #002B5B;
+	        color: #F3F3F3;
+	        width: 80px;
+	        height: 25px;
+	        margin: 0px;
+	        border: 2px solid #002B5B;
+	        border-radius: 8px;
+	        font-size: 0.8em;
+	        cursor:pointer;
+	        text-align: center;
+	    }
+	    
+/* 	    #write-notice > button:hover { */
+/*             background-color: #F3F3F3; */
+/*             color: #002B5B; */
+/*         } */
+        
     /* 공지사항 */
     #notice {
         width: 950px;
@@ -82,7 +109,7 @@ main {
         #notice > table {
             display: flex;
             justify-content: center;
-            padding-top: 80px;
+            padding-top: 7px;
             padding-bottom: 50px;
         }
 
