[ADD & UPDATE] 23/08/09 가온누리 프로젝트 공지사항 검색, 수정, 삭제, 상세보기 기능 추가
1. 공지사항 검색 기능 추가
	- 검색 결과 jsp 페이지 추가
	- 페이징처리 (진행중)
	- css 재적용 필요
2. 공지사항 수정 jsp 추가 및 기능 적용
3. 공지사항 삭제 기능 추가
4. 공지사항 상세보기 jsp 추가 및 기능 적용

--- a/src/main/webapp/resources/css/notice/notice.css
+++ b/src/main/webapp/resources/css/notice/notice.css
@@ -19,16 +19,26 @@ td:first-child {
     font-size: 0.9em;
 }
 
-td:nth-child(2) {
+td:nth-child(2){
     width: 800px;
     text-align: left;
     padding-left: 20px;
     cursor: pointer;
 }
 
+#noticeSubject {
+	color: #000;
+    text-align: left;
+    cursor: pointer;
+}
+
 td:nth-child(2):hover {
     text-decoration: underline;
     text-decoration-color: #EA5455;
+    color: #EA5455;
+}
+
+#noticeSubject:hover {
     color: #EA5455;
 }
 
