[ADD & UPDATE] 23/08/09 가온누리 프로젝트 공지사항 검색 페이지 수정, 목록 없음 페이지 추가
1. 공지사항 검색
	- 페이징 기능 처리 완료
	- 검색한 단어 검색창에 그대로 표시
	- 화면 구성 수정
2. 공지사항 데이터 없을 시, 목록 없음 페이지 추가 : noticeNone.jsp / NoneController

그 외 jsp, css 일부 수정

--- a/src/main/webapp/resources/css/notice/notice.css
+++ b/src/main/webapp/resources/css/notice/notice.css
@@ -59,7 +59,7 @@ td:last-child, th:last-child {
 main {
     background-color: #F3F3F3;
     width: 100%;
-    height: auto;
+    height: 890px;
 }
 
     #notice-title {
@@ -173,4 +173,15 @@ main {
         #page li:not(li:first-child, li:last-child):hover {
             color: #EA5455;
         }
+        
+	/* 비어있는 공지 */
+	#notice-none {
+		height: 470px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-family: 'Chosunilbo_myungjo', sans-serif, serif;
+    	font-size: 1.2em;
+	    color: #B5B5B5;
+	}
         
