[ADD] 23/08/14 가온누리 프로젝트 마이페이지에 나의 행사 예매, 한복 대여, Q&A 출력란 추가 / 일부 기능 수정
1. 기능 추가를 위해 전반적인 jsp, css 추가
2. 로그인 한 사용자 정보를 통해 나의 행사 예매, 한복 대여 내역 출력 기능 추가
3. Q&A란은 아직 미처리 (Q&A 기능이 미구현)
4. 탈퇴 시 세션 파괴 기능 추가
5. css의 main section에 min-height 값 추가

--- a/src/main/webapp/resources/css/notice/notice.css
+++ b/src/main/webapp/resources/css/notice/notice.css
@@ -59,7 +59,7 @@ td:last-child, th:last-child {
 main {
     background-color: #F3F3F3;
     width: 100%;
-    height: 890px;
+/*     height: 890px; */
 }
 
     #notice-title {
