--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -178,7 +178,8 @@ header {
 main {
     background-color: #F3F3F3;
     width: 100%;
-    height: auto;
+/*     height: auto; */
+	min-height: 761px;
 }
 
 footer {
